--- a/new_app/pubspec.yaml
+++ b/new_app/pubspec.yaml
@@ -58,6 +58,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  fonts:
+    - family: Satisfy
+      fonts:
+        - asset: Assets/fonts/Satisfy-Regular.ttf
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
